--- a/package.json
+++ b/package.json
@@ -5,55 +5,70 @@
   "type": "module",
   "packageManager": "pnpm@10.12.4",
   "scripts": {
+    "// ========== SETUP & INIT ========== //": "",
     "setup": "powershell -ExecutionPolicy Bypass -File scripts/setup.ps1",
+    "check:requirements": "powershell -ExecutionPolicy Bypass -File scripts/check-requirements.ps1",
+    "install:tools": "powershell -ExecutionPolicy Bypass -File scripts/install-tools.ps1",
+    "// ========== DEVELOPMENT ========== //": "",
     "dev": "powershell -ExecutionPolicy Bypass -File scripts/dev-all-docker.ps1",
-    "dev:all": "powershell -ExecutionPolicy Bypass -File scripts/dev-all-docker.ps1",
-    "dev:backend": "powershell -ExecutionPolicy Bypass -File scripts/dev-backend-docker.ps1",
-    "dev:frontend": "powershell -ExecutionPolicy Bypass -File scripts/dev-frontend-docker.ps1",
-    "dev:local": "concurrently \"npm run docker:backend\" \"npm run frontend:dev\"",
-    "frontend:dev": "pnpm --filter frontend dev",
-    "frontend:build": "pnpm --filter frontend build",
-    "frontend:preview": "pnpm --filter frontend preview",
-    "frontend:lint": "pnpm --filter frontend lint",
-    "frontend:format": "pnpm --filter frontend format",
-    "frontend:type-check": "pnpm --filter frontend type-check",
-    "backend:dev": "echo 'Backend wird in Phase 3 implementiert'",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:backend": "docker-compose up -d mysql phpmyadmin backend",
-    "docker:logs": "docker-compose logs -f",
-    "docker:logs:frontend": "docker-compose logs -f frontend",
-    "docker:logs:backend": "docker-compose logs -f backend",
-    "docker:restart": "docker-compose restart",
-    "build": "powershell -ExecutionPolicy Bypass -File scripts/build.ps1",
-    "build:frontend": "pnpm --filter frontend build",
-    "test": "powershell -ExecutionPolicy Bypass -File scripts/test.ps1",
-    "test:frontend": "pnpm --filter frontend test",
-    "clean": "powershell -ExecutionPolicy Bypass -File scripts/clean.ps1 -Build",
-    "clean:all": "powershell -ExecutionPolicy Bypass -File scripts/clean.ps1 -All",
-    "clean:deps": "powershell -ExecutionPolicy Bypass -File scripts/clean.ps1 -Deps",
-    "clean:docker": "powershell -ExecutionPolicy Bypass -File scripts/clean.ps1 -Docker",
-    "db:reset": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 reset",
-    "db:backup": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 backup",
-    "db:shell": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 shell",
-    "db:status": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 status",
-    "status": "powershell -ExecutionPolicy Bypass -File scripts/status.ps1",
-    "stop": "powershell -ExecutionPolicy Bypass -File scripts/stop-all.ps1",
+    "dev:all": "pnpm dev",
+    "dev:backend-docker": "powershell -ExecutionPolicy Bypass -File scripts/dev-backend-docker.ps1",
+    "dev:frontend-docker": "powershell -ExecutionPolicy Bypass -File scripts/dev-frontend-docker.ps1",
+    "// ========== APP SPECIFIC ========== //": "",
+    "web:dev": "pnpm --filter @faninitiative/web dev",
+    "web:build": "pnpm --filter @faninitiative/web build",
+    "web:preview": "pnpm --filter @faninitiative/web preview",
+    "web:test": "pnpm --filter @faninitiative/web test",
+    "web:storybook": "pnpm --filter @faninitiative/web sb",
+    "api:dev": "pnpm --filter @faninitiative/api dev",
+    "api:build": "pnpm --filter @faninitiative/api build",
+    "api:start": "pnpm --filter @faninitiative/api start",
+    "api:test": "echo 'API tests will be implemented in Phase 3'",
+    "// ========== CODE QUALITY ========== //": "",
     "lint": "pnpm -r lint",
+    "lint:fix": "pnpm -r lint:fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "pnpm -r type-check",
-    "check:requirements": "powershell -ExecutionPolicy Bypass -File scripts/check-requirements.ps1",
-    "install:tools": "powershell -ExecutionPolicy Bypass -File scripts/install-tools.ps1"
+    "test": "pnpm -r test",
+    "// ========== BUILD & DEPLOY ========== //": "",
+    "build": "pnpm -r build",
+    "build:packages": "pnpm --filter './packages/*' build",
+    "build:apps": "pnpm --filter './apps/*' build",
+    "preview": "pnpm web:preview",
+    "// ========== DOCKER & DATABASE ========== //": "",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:restart": "docker-compose restart",
+    "docker:rebuild": "docker-compose down && docker-compose build --no-cache && docker-compose up -d",
+    "docker:logs": "docker-compose logs -f",
+    "docker:logs:web": "docker-compose logs -f frontend",
+    "docker:logs:api": "docker-compose logs -f backend",
+    "docker:logs:db": "docker-compose logs -f mysql",
+    "db:reset": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 reset",
+    "db:backup": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 backup",
+    "db:restore": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 restore",
+    "db:shell": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 shell",
+    "db:status": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 status",
+    "// ========== UTILITIES ========== //": "",
+    "clean": "pnpm -r clean && powershell -ExecutionPolicy Bypass -File scripts/clean.ps1 -Build",
+    "clean:all": "powershell -ExecutionPolicy Bypass -File scripts/clean.ps1 -All",
+    "clean:deps": "powershell -ExecutionPolicy Bypass -File scripts/clean.ps1 -Deps",
+    "clean:docker": "powershell -ExecutionPolicy Bypass -File scripts/clean.ps1 -Docker",
+    "status": "powershell -ExecutionPolicy Bypass -File scripts/status.ps1",
+    "stop": "powershell -ExecutionPolicy Bypass -File scripts/stop-all.ps1",
+    "deps:update": "pnpm update -r --interactive",
+    "deps:outdated": "pnpm outdated -r",
+    "deps:check": "pnpm ls -r --depth 0"
   },
   "devDependencies": {
+    "@faninitiative/config": "workspace:*",
     "concurrently": "^9.1.0",
-    "globals": "^15.15.0",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "turbo": "^2.3.3"
   },
-  "msw": {
-    "workerDirectory": [
-      "public"
-    ]
+  "engines": {
+    "node": ">=20.0.0",
+    "pnpm": ">=10.12.4"
   }
 }
