--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,32 @@
+# docker-compose.yml
 services:
-  # Frontend Development - Fixed
+  # Frontend Development
   frontend:
     image: node:20-alpine
-    working_dir: /app
+    working_dir: /workspace/apps/web
     ports:
       - "5173:5173"
     volumes:
-      - ./apps/web:/app
-      - frontend_node_modules:/app/node_modules
+      # Mount entire monorepo
+      - ./:/workspace
+      # Exclude node_modules to avoid conflicts
+      - /workspace/node_modules
+      - /workspace/apps/web/node_modules
+      - /workspace/apps/api/node_modules
+      - /workspace/packages/config/node_modules
+      - /workspace/packages/shared/node_modules
+      - /workspace/packages/ui/node_modules
     environment:
-      - VITE_API_BASE_URL=http://localhost:3000/api
+      - VITE_API_BASE_URL=http://backend:3000/api
       - VITE_ENABLE_DEVTOOLS=true
     command: >
       sh -c "
         echo 'Installing pnpm...' &&
-        npm install -g pnpm@9.15.1 &&
-        echo 'Installing dependencies...' &&
+        npm install -g pnpm@10.12.4 &&
+        cd /workspace &&
+        echo 'Installing dependencies from root...' &&
         pnpm install &&
+        cd /workspace/apps/web &&
         echo 'Starting Vite dev server...' &&
         pnpm dev --host 0.0.0.0
       "
@@ -29,23 +39,19 @@ services:
   # Backend (Next.js API)
   backend:
     image: node:20-alpine
+    working_dir: /workspace/apps/api
     ports:
       - "3000:3000"
     volumes:
-      - ./backend:/app
-      - /app/node_modules
-    working_dir: /app
-    command: >
-      sh -c "
-        echo 'Installing pnpm...' &&
-        npm install -g pnpm@10.12.4 &&
-        echo 'Installing backend dependencies...' &&
-        pnpm install &&
-        echo 'Waiting for database...' &&
-        sleep 10 &&
-        echo 'Starting Next.js backend...' &&
-        pnpm dev
-      "
+      # Mount entire monorepo
+      - ./:/workspace
+      # Exclude node_modules
+      - /workspace/node_modules
+      - /workspace/apps/web/node_modules
+      - /workspace/apps/api/node_modules
+      - /workspace/packages/config/node_modules
+      - /workspace/packages/shared/node_modules
+      - /workspace/packages/ui/node_modules
     environment:
       - NODE_ENV=development
       - DATABASE_URL=mysql://fanini:password@mysql:3306/fanini_db
@@ -54,6 +60,19 @@ services:
       - DB_USER=fanini
       - DB_PASSWORD=password
       - DB_NAME=fanini_db
+    command: >
+      sh -c "
+        echo 'Installing pnpm...' &&
+        npm install -g pnpm@10.12.4 &&
+        cd /workspace &&
+        echo 'Installing dependencies from root...' &&
+        pnpm install &&
+        echo 'Waiting for database...' &&
+        sleep 10 &&
+        cd /workspace/apps/api &&
+        echo 'Starting Next.js backend...' &&
+        pnpm dev
+      "
     depends_on:
       - mysql
     networks:
@@ -76,7 +95,7 @@ services:
     networks:
       - fanini-network
 
-  # phpMyAdmin (für Entwicklung)
+  # phpMyAdmin
   phpmyadmin:
     image: phpmyadmin:latest
     environment:
@@ -92,7 +111,6 @@ services:
 
 volumes:
   mysql_data:
-  frontend_node_modules:
 
 networks:
   fanini-network:
