Refactor database structure and repositories
- Deleted MySQLMemberRepository and MySQLStatsRepository as they are no longer needed.
- Updated index.ts to reflect changes in repository paths.
- Improved migration scripts for documents, adding new columns and indexes.
- Implemented MySQLDocumentRepository with methods for document management.
- Added GoogleDriveService for handling file uploads and management in Google Drive.
- Introduced RetryableGoogleDriveService for enhanced error handling during Google Drive operations.
- Created use cases for document management: GetDocumentsUseCase and UploadDocumentUseCase.
- Added UploadEventPhotosUseCase for managing event photo uploads.
- Defined Document entity and IDocumentRepository interface for document data access.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,8 +15,12 @@
   },
   "dependencies": {
     "@faninitiative/shared": "workspace:*",
+    "@google-cloud/local-auth": "^3.0.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "fs": "0.0.1-security",
+    "google-auth-library": "^10.1.0",
+    "googleapis": "^152.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.0",
     "next": "15.2.0",
